style update to fix jumping to sections

--- a/clutch/css/clutch.css
+++ b/clutch/css/clutch.css
@@ -124,6 +124,7 @@ strong {
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
+	margin: 30px 0 0;
 }
 .parallax {
 	color: #FFFFFF;
@@ -148,7 +149,7 @@ strong {
 	background-color: #FFFFFF;
 	padding-bottom: 35px;
 	width: 100%;
-	margin: 10px 0;
+	margin: 30px 0 0;
 	display: inline-block;
 }
 .info_column {
@@ -168,7 +169,7 @@ strong {
 .cards {
 	width: 400px;
 	height: 225px;
-	margin: 0 auto;
+	margin: 5px auto;
 }
 .cards iframe {
 	width: 100%;
@@ -193,8 +194,8 @@ strong {
 .about {
 	background-color: #FFFFFF;
 	width: 100%;
-	padding: 10px 0 30px 0;
-	margin: 5px 0 20px;
+	padding: 40px 0;
+	margin: 30px 0 0;
 }
 .grid {
 	display: grid;
@@ -242,25 +243,6 @@ strong {
 	line-height: 25px;
 	font-weight: lighter;
 	margin: 0 20px;
-}
-.button {
-	width: 200px;
-	margin: 40px auto auto;
-	padding: 20px 10px;
-	text-align: center;
-	vertical-align: middle;
-	border-radius: 0;
-	text-transform: uppercase;
-	font-weight: bold;
-	letter-spacing: 2px;
-	border: 3px solid #FFFFFF;
-	color: #FFFFFF;
-	transition: all 0.3s linear;
-}
-.button:hover {
-	background-color: #FEFEFE;
-	color: #C4C4C4;
-	cursor: pointer;
 }
 #spons img {
 	width: 15%;
@@ -403,6 +385,12 @@ strong {
 		width: 100%;
 		text-align: center;
 	}
+	.info {
+		padding: 80px 0 35px;
+	}
+	.about {
+		padding: 80px 0 35px;
+	}
 	.info .info_column {
 		width: 100%;
 	}
@@ -420,6 +408,25 @@ strong {
 		padding: 0;
 	}
 }
+
+@media (min-width: 1097px) and (max-width: 1489px) {
+	.info {
+		padding: 50px 0 35px;
+	}
+	.about {
+		padding: 100px 0 35px;
+	}
+}
+
+@media (min-width: 1490px) and (max-width: 1830px) {
+	.info {
+		padding: 50px 0 35px;
+	}
+	.about {
+		padding: 80px 0 35px;
+	}
+}
+
 /* Dark mode testing
 @media screen and (prefers-color-scheme: dark) {
 	.container {
